--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.8.0",
+    "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "sass": "^1.71.0",
